--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
         <mat-card *ngFor="let client of clients | filter: searchText" class="pointer" (click)="selectedClient(client)">
           <mat-card-header *ngIf="client !== -1">
             <div mat-card-avatar class="client-small-avatar" [style.backgroundImage]="'url(' + client.general.avatar + ')'"></div>
-            <mat-card-title> {{ client.general.firstName }} {{ client.general.lastName }}</mat-card-title>
+            <mat-card-title> {{ client.general.fullName }} </mat-card-title>
             <mat-card-subtitle> {{ client.job.title }} </mat-card-subtitle>
           </mat-card-header>
 
