--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -26,7 +26,7 @@
 .clients-list {
     display: block;
     overflow-y: auto;
-    max-height: calc(100vh + 60px);
+    max-height: calc(100vh - 60px);
 }
 
 .search-clients {
